// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders correctly 1`] = `""`;

exports[`Modal when isOpen is true renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="modal"
  >
    <button
      className="closeButton"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="white"
        />
      </svg>
    </button>
    <div
      className="circle success"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="green"
        />
      </svg>
    </div>
    <p
      className="text"
    >
      Success!
    </p>
    <Button
      elementType="button"
      fullWidth={false}
      inlineStyles={
        Object {
          "minWidth": "120px",
        }
      }
      rel="noopener noreferrer"
      submitsForm={false}
      target="_blank"
      text="Ok"
      type="primary"
    />
  </div>
</div>
`;

exports[`Modal when isOpen is true when custom content is passed in renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="modal"
  >
    <button
      className="closeButton"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="white"
        />
      </svg>
    </button>
    <div>
      Here is some custom content
    </div>
  </div>
</div>
`;

exports[`Modal when isOpen is true when text is passed in renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="modal"
  >
    <button
      className="closeButton"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="white"
        />
      </svg>
    </button>
    <div
      className="circle success"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="green"
        />
      </svg>
    </div>
    <p
      className="text"
    >
      This is custom text
    </p>
    <Button
      elementType="button"
      fullWidth={false}
      inlineStyles={
        Object {
          "minWidth": "120px",
        }
      }
      rel="noopener noreferrer"
      submitsForm={false}
      target="_blank"
      text="Ok"
      type="primary"
    />
  </div>
</div>
`;

exports[`Modal when isOpen is true when text is passed in renders correctly 2`] = `
<div
  className="container"
>
  <div
    className="modal"
  >
    <button
      className="closeButton"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="white"
        />
      </svg>
    </button>
    <div
      className="circle success"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="green"
        />
      </svg>
    </div>
    <p
      className="text"
    >
      Success!
    </p>
    <Button
      elementType="button"
      fullWidth={false}
      inlineStyles={
        Object {
          "minWidth": "120px",
        }
      }
      rel="noopener noreferrer"
      submitsForm={false}
      target="_blank"
      text="Custom Text"
      type="primary"
    />
  </div>
</div>
`;

exports[`Modal when isOpen is true when type is error renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="modal"
  >
    <button
      className="closeButton"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="white"
        />
      </svg>
    </button>
    <div
      className="circle error"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="red"
        />
      </svg>
    </div>
    <p
      className="text"
    >
      Error!
    </p>
    <Button
      elementType="button"
      fullWidth={false}
      inlineStyles={
        Object {
          "minWidth": "120px",
        }
      }
      rel="noopener noreferrer"
      submitsForm={false}
      target="_blank"
      text="Ok"
      type="primary"
    />
  </div>
</div>
`;

exports[`Modal when isOpen is true when type is warning renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="modal"
  >
    <button
      className="closeButton"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="white"
        />
      </svg>
    </button>
    <div
      className="circle warning"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 192 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
          fill="orange"
        />
      </svg>
    </div>
    <p
      className="text"
    >
      Warning!
    </p>
    <Button
      elementType="button"
      fullWidth={false}
      inlineStyles={
        Object {
          "minWidth": "120px",
        }
      }
      rel="noopener noreferrer"
      submitsForm={false}
      target="_blank"
      text="Ok"
      type="primary"
    />
  </div>
</div>
`;
